added posts on home and like functionality
