# backend/services/posts/Controller.js
@@ -7,7 +7,7 @@ const { Config } = require("../../configs");
 module.exports = class PostsController {
   static async createOne(req, res) {
     try {
-      Logger.info({ action: "create post", user: req.auth.id });
+      Logger.info(JSON.stringify({ action: "create post", user: req.auth.id }));
       const validated = await PostsValidator.validateCreate(req.body);
 
       const files = validated.files.map((id) => ({ id }));
@@ -34,7 +34,12 @@ module.exports = class PostsController {
             select: {
               firstName: true,
               lastName: true,
-              profileAvatar: true,
+              profileAvatarId: true,
+            },
+          },
+          likers: {
+            select: {
+              id: true,
             },
           },
         },
@@ -48,7 +53,7 @@ module.exports = class PostsController {
 
   static async getMany(req, res) {
     try {
-      Logger.info({ action: "get posts", user: req.auth.id });
+      Logger.info(JSON.stringify({ action: "get posts", user: req.auth.id }));
       const page = parseInt(req.query.page) || 1;
       const pageSize = Config.POSTS_PER_PAGE;
       const skip = (page - 1) * pageSize;
@@ -65,7 +70,15 @@ module.exports = class PostsController {
               id: true,
               firstName: true,
               lastName: true,
-              profileAvatar: true,
+              profileAvatarId: true,
+            },
+          },
+          likers: {
+            where: {
+              id: req.auth.id,
+            },
+            select: {
+              id: true,
             },
           },
         },
@@ -80,7 +93,9 @@ module.exports = class PostsController {
 
   static async getOne(req, res) {
     try {
-      Logger.info({ action: "Get One post", user: req.auth.id });
+      Logger.info(
+        JSON.stringify({ action: "Get One post", user: req.auth.id })
+      );
       const postId = parseInt(req.params.postId, 10);
       if (isNaN(postId)) {
         RequestHandler.throwError(
@@ -106,17 +121,167 @@ module.exports = class PostsController {
               id: true,
               firstName: true,
               lastName: true,
-              profileAvatar: true,
+              profileAvatarId: true,
+            },
+          },
+          likers: {
+            select: {
+              id: true,
             },
           },
         },
       });
 
       if (!post) {
-        return res.status(404).json({ error: "Post not found." });
+        RequestHandler.throwError(404, "Post Not Found");
       }
+
+      RequestHandler.sendSuccess(req, res, post);
     } catch (error) {
       console.log("Error getting post", error);
+      RequestHandler.sendError(req, res, error);
+    }
+  }
+
+  static async likePost(req, res) {
+    try {
+      Logger.info(JSON.stringify({ action: "Like Post", user: req.auth.id }));
+
+      const postId = parseInt(req.params.postId, 10);
+      if (isNaN(postId)) {
+        return RequestHandler.throwError(
+          400,
+          "Invalid postId. Must be a number"
+        )();
+      }
+
+      const post = await prisma.post.findUnique({
+        where: {
+          id: postId,
+        },
+        include: {
+          likers: {
+            where: {
+              id: req.auth.id,
+            },
+            select: {
+              id: true,
+            },
+          },
+        },
+      });
+
+      if (!post) {
+        return RequestHandler.throwError(404, "Post not found")();
+      }
+
+      if (post.likers.length > 0) {
+        return RequestHandler.throwError(
+          409,
+          "Post already liked by the user"
+        )();
+      }
+
+      const userId = req.auth.id; // Use the authenticated user's ID
+
+      // Update the post to add the user as a liker
+      const updatedPost = await prisma.post.update({
+        where: {
+          id: postId,
+        },
+        data: {
+          likers: {
+            connect: {
+              id: userId,
+            },
+          },
+        },
+        include: {
+          _count: true,
+          likers: {
+            where: {
+              id: req.auth.id,
+            },
+            select: {
+              id: true,
+            },
+          },
+        },
+      });
+
+      RequestHandler.sendSuccess(req, res, updatedPost);
+    } catch (error) {
+      console.log("error liking post: ", error);
+      RequestHandler.sendError(req, res, error);
+    }
+  }
+
+  static async unlikePost(req, res) {
+    try {
+      Logger.info(JSON.stringify({ action: "unLike Post", user: req.auth.id }));
+
+      const postId = parseInt(req.params.postId, 10);
+      if (isNaN(postId)) {
+        return RequestHandler.throwError(
+          400,
+          "Invalid postId. Must be a number"
+        )();
+      }
+
+      const post = await prisma.post.findUnique({
+        where: {
+          id: postId,
+        },
+        include: {
+          likers: {
+            where: {
+              id: req.auth.id,
+            },
+            select: {
+              id: true,
+            },
+          },
+        },
+      });
+
+      if (!post) {
+        return RequestHandler.throwError(404, "Post not found")();
+      }
+
+      if (post.likers.length < 0) {
+        return RequestHandler.throwError(409, "Post not liked by the user")();
+      }
+
+      const userId = req.auth.id; // Use the authenticated user's ID
+
+      // Update the post to add the user as a liker
+      const updatedPost = await prisma.post.update({
+        where: {
+          id: postId,
+        },
+        data: {
+          likers: {
+            disconnect: {
+              id: userId,
+            },
+          },
+        },
+        include: {
+          _count: true,
+          likers: {
+            where: {
+              id: req.auth.id,
+            },
+            select: {
+              id: true,
+            },
+          },
+        },
+      });
+
+      RequestHandler.sendSuccess(req, res, updatedPost);
+    } catch (error) {
+      console.log("error unliking post: ", error);
       RequestHandler.sendError(req, res, error);
     }
   }
