# backend/services/posts/Router.js
@@ -10,4 +10,7 @@ router.get("/", AuthMiddleware, PostsController.getMany);
 
 router.get("/:postId", AuthMiddleware, PostsController.getOne);
 
+router.post("/:postId/like", AuthMiddleware, PostsController.likePost);
+router.post("/:postId/unlike", AuthMiddleware, PostsController.unlikePost);
+
 module.exports = router;
